feat(department): get department by id
- user can get a department by the department id

[Delivers: #170035523]
