# src/routes/api/department.route.js
@@ -4,6 +4,7 @@ import checkAdmin from '../../middlewares/checkAdmin';
 import checkDepartment from '../../middlewares/checkDepartment';
 import Authentication from '../../middlewares/authentication';
 import validateInput from '../../middlewares/validateInput';
+import validateIdParams from '../../middlewares/validateIdParams';
 
 const router = Router();
 
@@ -17,5 +18,11 @@ router.post(
 );
 
 router.get('/departments', DepartmentController.getAllDepartments);
+
+router.get(
+  '/departments/:id',
+  validateIdParams,
+  DepartmentController.getOneDepartment
+);
 
 export default router;
